# Dutchnary

./: CMakeLists.txt  README.md
Data/: Multilingual.json
Src/: Dictionary.cpp  Dictionary.h  Dutchnary.cpp  InterfaceScreen.cpp  InterfaceScreen.h  Multilingual.cpp  Multilingual.h  Word.cpp  Word.h
Tests/: CMakeLists.txt  Main.cpp  WordTests.cpp
